--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <label for="gym" class="checkbox-align"><input type="checkbox" name="gym" value="gym" class="input-checkbox inline" id="gym" />Fitness center</label>
         <label for="promotions" class="checkbox-align"><input type="checkbox" name="promotions" value="promotions" class="input-checkbox inline" id="promotions" />Promotion assessments</label>
         <label for="vacation" class="checkbox-align"><input type="checkbox" name="vacation" value="b" class="input-checkbox inline" id="vacation" />More paid holidays</label>
-        <label for="scholarship" class="checkbox-align"><input type="checkbox" name="scholarship" value="b" class="input-checkbox inline" id="scholarship" />Continuing education assistance</label>
+        <label for="scholarship" class="checkbox-align"><input type="checkbox" name="scholarship" value="b" class="input-checkbox inline" id="scholarship" />Education reimbursment</label>
         <label for="hours" class="checkbox-align"><input type="checkbox" name="hours" value="hours" class="input-checkbox inline" id="hours" />Shorter hours</label>
       </div>
       <div class="form-control text">
